[package]
name = "aoc"
version = "0.1.0"
edition = "2021"
default-run = "aoc"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[profile.release]
debug = 1
incremental = true

[build]
rustflags = ["-C", "link-arg=-fuse-ld=lld"]

[dependencies]
nom = "7.1.3"
seq-macro = "0.3.3"
paste = "1.0.12"
pico-args = "0.5.0"